# gne_tests

./: README.md  gh_actions.sh  pyproject.toml  setup.cfg  tests.sh
.github/workflows/: std_tests.yaml
tests/: TEST_CONSTANTS.py  conftest.py  test_lesson1.py  test_lesson2.py  test_lesson3.py  test_lesson4.py  test_lesson5.py  test_lesson6.py  test_lesson7.py  test_lesson8.py  utilities.py
