[build-system]
requires = ["poetry==1.7.1"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "gne_tests"
version = "0.0.1"
description = "GNE Exercises: Automated Tests"
authors = ["Kirk Byers <ktbyers@twb-tech.com>"]
license = "Apache2"
readme = "README.md"
repository = "https://github.com/twin-bridges/gne_tests"
classifiers = [
        "License :: OSI Approved :: Apache License, Version 2.0 (Apache-2.0)",
        "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
pytest = "8.2.0"
pylama = "8.4.1"
